find ticket by location

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -9,7 +9,7 @@
 }
 .wrapper .center {
 	position: absolute;
-	top: 35%;
+	top: 50%;
 	left: 35%;
 	transform: translate(-50%, -50%);
 	font-family: 'Oswald', sans-serif;
@@ -44,18 +44,18 @@
 }
 .center h1 {
 	color: white;
-	font-size: 60px;
+	font-size: 42px;
 	font-weight: bold;
 	width: 900px;
-	text-align: center;
+	text-align: left;
 }
 .center h2 {
 	color: white;
-	font-size: 50px;
+	font-size: 34px;
 	font-weight: bold;
 	width: 885px;
 	margin-top: 10px;
-	text-align: center;
+	text-align: left;
 }
 /*
 .center .buttons {
